...

  // ── Decrypt ─────────────────────────────────────────────────────────────────

  static String decrypt(String message, String privateKey, String passphrase,
          {KeyOptions? options, Entity? signed}) =>
      OpenPGPResponseHandlers.stringResponse(_call(
          'decrypt',
          model.DecryptRequestObjectBuilder(
            message: message,
            privateKey: privateKey,
            passphrase: passphrase,
            options: OpenPGPRequestBuilders.keyOptionsBuilder(options),
            signed: OpenPGPRequestBuilders.entityBuilder(signed),
          )));

...

  // ── Encrypt ─────────────────────────────────────────────────────────────────

  static String encrypt(String message, String publicKey,
          {KeyOptions? options, Entity? signed, FileHints? fileHints}) =>
      OpenPGPResponseHandlers.stringResponse(_call(
          'encrypt',
          model.EncryptRequestObjectBuilder(
            publicKey: publicKey,
            message: message,
            options: OpenPGPRequestBuilders.keyOptionsBuilder(options),
            signed: OpenPGPRequestBuilders.entityBuilder(signed),
            fileHints: OpenPGPRequestBuilders.fileHintsBuilder(fileHints),
...

  // ── Sign ────────────────────────────────────────────────────────────────────

  static String sign(String message, String privateKey, String passphrase,
          {KeyOptions? options}) =>
      OpenPGPResponseHandlers.stringResponse(_call(
          'sign',
          model.SignRequestObjectBuilder(
            message: message,
            passphrase: passphrase,
            privateKey: privateKey,
            options: OpenPGPRequestBuilders.keyOptionsBuilder(options),
          )));
...
          )));

  // ── Verify ──────────────────────────────────────────────────────────────────

  static bool verify(String signature, String message, String publicKey) =>
      OpenPGPResponseHandlers.boolResponse(_call(
          'verify',
          model.VerifyRequestObjectBuilder(
            publicKey: publicKey,
            message: message,
            signature: signature,
          )));

...
